seccion talleristas agregar galeria

--- a/src/style/core/_settings.scss
+++ b/src/style/core/_settings.scss
@@ -12,10 +12,11 @@ $h1-size: 32px;
 $h2-size: 30px;
 $h3-size: 28px;
 $menu-size: 14px;
+$min: 13px;
 $taller-data: 13px;
 $taller-title: 15px;
 $taller-price: 18px;
-$footer-title: 18px;
+$footer-title: 19px;
 $footer-content: 15px;
 $footer-copy: 12px;
 
@@ -33,7 +34,9 @@ $black: rgba(0, 0, 0, .7);
 $text-m: #000000;
 $text-s: #000000;
 $text-g: #494949;
+$hove-whatsapp: #22AE96;
 
+$bg-input-form: rgba(253,226,54,.9);
 $amarillo: #fde236;
 $amarillo-d: #c6b000;
 $amarillo-l: #ffff6d;
