--- a/src/style/modules/_footer.scss
+++ b/src/style/modules/_footer.scss
@@ -43,6 +43,7 @@
 }
 
 .footer__vertical__2__keywords{
+  display: none;
   font-size: 12px;
   padding-top: 20px;
   ul li{
@@ -52,11 +53,20 @@
 }
 
 .footer__vertical__2__menu{
-  
+  text-align: left;
+  padding: 0 15%;
+  @include md {
+    padding: 0 25%;
+  }
 }
 
 .footer__3__vertical__social{
   padding-top: 20px; 
+  text-align: left;
+  margin: 0 auto;
+}
+.footer__3__vertical__description{
+  text-align: left; 
 }
 
 .footer__copyrigth{
