--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -21,6 +21,7 @@ Tags: arts, clean, minimal, modern, documentation
 //components
 @import 'components/shadows';
 @import 'components/buttons';
+@import 'components/forms';
 
 @import 'modules/header';
 @import 'modules/hero';
