--- a/src/style/modules/_tallerista.scss
+++ b/src/style/modules/_tallerista.scss
@@ -16,6 +16,7 @@ tallerista__title{
 .tallerista__beneficios{
   padding-top: 20px;
   ul li{
+    text-align: left;
     font-weight: 300;
     display: inline-block;
     padding: 3px 3px;
