--- a/src/style/modules/_tallerista.scss
+++ b/src/style/modules/_tallerista.scss
@@ -1,5 +1,6 @@
 .tallerista__container{
   padding: $padding-section;
+  padding-bottom: 80px;
   background: $main;
   color: $text-m;
 }
@@ -10,7 +11,7 @@
   align-items: center;
   text-align: center;
 }
-tallerista__title{
+.tallerista__title{
   width: 100%;
 }
 .tallerista__beneficios{
@@ -19,9 +20,24 @@ tallerista__title{
     text-align: left;
     font-weight: 300;
     display: inline-block;
-    padding: 3px 3px;
+    padding: 10px 3px;
     @include md {
       display: block;
     }
+    .icono{
+      font-size: 30px;
+      padding-right: 10px;
+    }
+  }
+}
+
+.tallerista__gallery{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  &__item{
+    max-width: 280px;
+    display: inline;
+    padding: 10px;
   }
 }
